--- a/index.html
+++ b/index.html
@@ -14,17 +14,42 @@
 
 <body>
 
-    <head>
+    <header>
         <div class="header-area">
             <h1>Let's go Sylhet stand by the flood people</h1>
             <p>
                 The people of Sylhet extended their hands to help them in the floods.
-                They can't eat properly. Their homes are all under water.
+                They can't eat properly. <br> Their homes are all under water.
                 They are located in the center of the shelter
             </p>
             <a class="button-style" href="">Donate Now</a>
         </div>
-    </head>
+    </header>
+    <section class="amount-select-area">
+        <div class="title-area">
+            <h2>Donate Today</h2>
+            <p>
+                Sylhet the amount of your donation. <br> Give the flood victims a chance to stand and help the floods
+                peopel
+            </p>
+        </div>
+        <div class="amount">
+            <ul>
+                <li><a href="">100tk</a></li>
+                <li><a class="orange" href="">150tk</a></li>
+                <li><a href="">200tk</a></li>
+                <li><a href="">500tk</a></li>
+                <li><a href="">1000tk</a></li>
+            </ul>
+            <div class="other-amount">
+                <span><a href="">Other Amount (Taka)</a></span>
+            </div>
+            <div class="button">
+                <a class="button-style" href="">Donate Now</a>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
