--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,8 +31,7 @@
         <div class="title-area">
             <h2>Donate Today</h2>
             <p>
-                Sylhet the amount of your donation. <br> Give the flood victims a chance to stand and help the floods
-                peopel
+                Make your donation today to change the lives of people globally. Even the smallest contributions matter!
             </p>
         </div>
         <div class="amount">
@@ -48,8 +49,102 @@
                 <a class="button-style" href="">Donate Now</a>
             </div>
         </div>
+    </section>
+    <section class="feacher-area">
+        <div class="title-area">
+            <h2>Donate Today</h2>
+            <p>
+                Sylhet the amount of your donation. <br> Give the flood victims a chance to stand and help the floods
+                peopel
+            </p>
+        </div>
+        <div class="feacher-box">
+            <div class="box">
+                <img src="icons/food.svg" alt="">
+                <h2>Food for a family</h2>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.
+                </p>
+            </div>
+            <div class="box box-style-2">
+                <img src="icons/family.svg" alt="">
+                <h2>Food for a family</h2>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.
+                </p>
+            </div>
+            <div class="box box-style-3">
+                <img src="icons/reading.svg" alt="">
+                <h2>Food for a family</h2>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="blog-area">
+        <div class="blog blog-1">
+            <div class="blog-content">
+                <h2>Their lives depend on your donation</h2>
+                <p>
+                    Make your donation today to change the lives of people globally. Even the smallest contributions.
+                    Vestibulum ac diam sit amet quam
+                </p>
+                <p class="content-top">
+                    Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam
+                </p>
+
+                <a class="button-style" href="">How to Contribute?</a>
+            </div>
+            <div class="blog-image">
+                <img src="images/blog-1.jpg" alt="">
+            </div>
+        </div>
+        <div class="blog blog-2">
+
+            <div class="blog-image">
+                <img src="images/blog-2.jpg" alt="">
+            </div>
+            <div class="blog-content">
+                <h2>Their lives depend on your donation</h2>
+                <p>
+                    Make your donation today to change the lives of people globally. Even the smallest contributions.
+                    Vestibulum ac diam sit amet quam
+                </p>
+                <p class="content-top">
+                    Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam
+                </p>
+
+                <a class="button-style" href="">How to Contribute?</a>
+            </div>
+        </div>
 
     </section>
+    <section class="update-area">
+        <div class="title-area">
+            <h2>Get My Updates</h2>
+            <p>
+                Help With Hunger By Donating Today! <br> Give us your Email and join our group
+                We are working togader, let's go.
+            </p>
+        </div>
+        <div class="subscripe-area">
+            <form action="">
+                <input type="email" placeholder="Email">
+                <a class="button-style" href="">Subscribe</a>
+            </form>
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer-area">
+            <h2>Be Humble</h2>
+            <p>I’m gonna do it</p>
+        </div>
+    </footer>
 </body>
 
 </html>
