--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
         </div>
 
     </section>
+    <section class="contact-form-area">
+
+        <div class="contact-from">
+            <div class="title-area">
+                <h2>Contact us</h2>
+
+            </div>
+            <form action="">
+                <input type="text" placeholder="Fast name">
+                <input type="text" placeholder="Fast name">
+                <input type="email" placeholder="Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <a class="button-style" href="">How to Contribute?</a>
+            </form>
+        </div>
+    </section>
     <section class="update-area">
         <div class="title-area">
             <h2>Get My Updates</h2>
